--- a/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
+++ b/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
@@ -127,7 +127,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="strawberrybananaJuiceOrderButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ddX-oc-Ahf"/>
+                                                    <action selector="orderJuiceButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KI1-wI-Zeq"/>
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9E2-H9-FXr">
@@ -142,7 +142,7 @@
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="mangokiwiJuiceOrderButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EtG-ri-1J9"/>
+                                                    <action selector="orderJuiceButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="e99-HJ-TJe"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -161,7 +161,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="strawberryJuiceOrderButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HES-e9-jrW"/>
+                                                            <action selector="orderJuiceButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ksW-Gs-UcT"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y2A-PH-DJY">
@@ -172,7 +172,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="bananaJuiceOrderButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Vow-VY-zsY"/>
+                                                            <action selector="orderJuiceButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8LB-5x-5YD"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BFb-ka-wGA">
@@ -183,7 +183,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="pineappleJuiceOrderButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4Ko-aS-ZPl"/>
+                                                            <action selector="orderJuiceButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gBu-xG-OTB"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wcW-7H-RXw">
@@ -194,7 +194,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="kiwiJuiceOrderButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NFV-j2-Ktn"/>
+                                                            <action selector="orderJuiceButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Unc-u7-XW1"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q6G-4X-bVm">
@@ -205,7 +205,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <action selector="mangoJuiceOrderButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Xl1-mK-STx"/>
+                                                            <action selector="orderJuiceButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3MF-wg-VzQ"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
